@@ -1,3 +1,8 @@
+2005-05-11  Bas Wijnen  <shevek@fmf.nl>
+
+	* Makefile (top level, dist): Use versions instead of dates.
+	* VERSION: New file.
+
 2005-05-10  Bas Wijnen  <shevek@fmf.nl>
 
 	* z80asm.1: New file.
